# loopbill_backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
infra/: main.tf
nginx/: nginx.conf
