[project]
name = "loopbill-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
